# sensorhub

./: CMakeLists.txt  README.md  config.ini
src/: config.c  config.h  data_processor.c  data_processor.h  main.c  network.c  network.h  queue.c  queue.h  sensor.c  sensor.h  utils.c  utils.h
tests/: run_tests.sh  test_config.c  test_queue.c  test_utils.c
